test/integration/bad/closures/forwarddecl.stan
model {
    functions
    real foo(real x, real y);
    functions
    real foo(real x, real y) {
        return sqrt(squar(x)+square(y));
    }
}